# predictive_maintenance

./: .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
.playwright-mcp/: page-2026-04-23T21-54-03-123Z.yml
data/: README.md
notebooks/: maintenance_genealogy_app.py  signal_analysis.py
scripts/: get_data.py
